# src/app/api/models/certification-heartbeat-request.ts
@@ -1,0 +1,10 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface CertificationHeartbeatRequest {
+
+  /**
+   * UUID de la tentative QCM active à prolonger.
+   */
+  attempt_uuid: string;
+}
